@@ -2,35 +2,34 @@ package com.estoque.api;
 
 import com.estoque.model.Endereco;
 import com.google.gson.Gson;
-import com.google.gson.JsonObject;
+import com.google.gson.annotations.SerializedName;
 
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 
-/**
- * Cliente da API REST pública ViaCEP.
- * Endpoint: https://viacep.com.br/ws/{cep}/json/
- */
+final class ViaCepResposta {
+    String logradouro;
+    String complemento;
+    String bairro;
+    @SerializedName("localidade")
+    String cidade;
+    String uf;
+    boolean erro;
+}
+
 public class ViaCepClient {
 
     private static final String BASE_URL = "https://viacep.com.br/ws/%s/json/";
-    private static final int TIMEOUT_MS = 8000; // 8 segundos
+    private static final int TIMEOUT_MS = 8000;
+    private static final Gson GSON = new Gson();
 
-    private final Gson gson = new Gson();
-
-    /**
-     * Busca o endereço completo para o CEP informado.
-     *
-     * @param cep CEP no formato "12345678" ou "12345-678"
-     * @return Endereco preenchido, ou null se CEP inválido
-     * @throws IOException se houver falha de rede
-     */
     public Endereco buscarEndereco(String cep) throws IOException {
-        // Sanitiza: remove qualquer caractere que não seja dígito
+
         String cepLimpo = cep.replaceAll("\\D", "");
 
         if (cepLimpo.length() != 8) {
@@ -42,7 +41,7 @@ public class ViaCepClient {
         HttpURLConnection conn = null;
 
         try {
-            URL url = new URL(urlStr);
+            URL url = URI.create(urlStr).toURL();
             conn = (HttpURLConnection) url.openConnection();
             conn.setRequestMethod("GET");
             conn.setConnectTimeout(TIMEOUT_MS);
@@ -50,62 +49,46 @@ public class ViaCepClient {
             conn.setRequestProperty("Accept", "application/json");
 
             int httpStatus = conn.getResponseCode();
-
             if (httpStatus != HttpURLConnection.HTTP_OK) {
-                throw new IOException(
-                        "ViaCEP retornou status HTTP " + httpStatus + " para o CEP " + cep);
+                throw new IOException("ViaCEP retornou status HTTP " + httpStatus + " para o CEP " + cep);
             }
 
-            // Lê o corpo da resposta
             StringBuilder sb = new StringBuilder();
             try (BufferedReader reader = new BufferedReader(
                     new InputStreamReader(conn.getInputStream(), StandardCharsets.UTF_8))) {
-
                 String linha;
-                // Uso de while (laço de leitura linha a linha)
                 while ((linha = reader.readLine()) != null) {
                     sb.append(linha);
                 }
             }
 
-            String json = sb.toString();
-            JsonObject obj = gson.fromJson(json, JsonObject.class);
+            ViaCepResposta resposta = GSON.fromJson(sb.toString(), ViaCepResposta.class);
 
-            // ViaCEP retorna {"erro": true} para CEPs inválidos
-            if (obj.has("erro") && obj.get("erro").getAsBoolean()) {
-                return null; // CEP não encontrado
+            if (resposta == null || resposta.erro) {
+                return null;
             }
 
-            return montarEndereco(obj, cepLimpo);
+            return montarEndereco(resposta, cepLimpo);
 
         } finally {
-            if (conn != null)
+            if (conn != null) {
                 conn.disconnect();
+            }
         }
     }
 
-    // ------------------------------------------------------------------
-    // Converte JsonObject → Endereco
-    // ------------------------------------------------------------------
-    private Endereco montarEndereco(JsonObject obj, String cepLimpo) {
+    private Endereco montarEndereco(ViaCepResposta r, String cepLimpo) {
         Endereco end = new Endereco();
-
-        // Formata o CEP com hífen: 12345-678
         end.setCep(cepLimpo.substring(0, 5) + "-" + cepLimpo.substring(5));
-        end.setLogradouro(getString(obj, "logradouro"));
-        end.setComplemento(getString(obj, "complemento"));
-        end.setBairro(getString(obj, "bairro"));
-        end.setCidade(getString(obj, "localidade"));
-        end.setUf(getString(obj, "uf"));
-
+        end.setLogradouro(nullSeVazio(r.logradouro));
+        end.setComplemento(nullSeVazio(r.complemento));
+        end.setBairro(nullSeVazio(r.bairro));
+        end.setCidade(nullSeVazio(r.cidade));
+        end.setUf(nullSeVazio(r.uf));
         return end;
     }
 
-    private String getString(JsonObject obj, String campo) {
-        if (obj.has(campo) && !obj.get(campo).isJsonNull()) {
-            String valor = obj.get(campo).getAsString();
-            return valor.isBlank() ? null : valor;
-        }
-        return null;
+    private String nullSeVazio(String valor) {
+        return (valor == null || valor.isBlank()) ? null : valor.trim();
     }
 }
